--- a/hugo.yaml
+++ b/hugo.yaml
@@ -15,6 +15,9 @@ menu:
   main:
   - name: Projects
     pageRef: /projects
+    weight: 1
+  - name: Github
+    url: https://github.com/davidchoo12
 params:
   homeInfoParams:
     title: 👋 Hi there! Welcome to my little blog!
