set timezone to sg

--- a/hugo.yaml
+++ b/hugo.yaml
@@ -5,6 +5,7 @@ theme: PaperMod
 frontmatter:
   lastmod: modified
   publishDate: published
+timeZone: Asia/Singapore
 markup:
   highlight:
     style: onedark
